fix bug: noticecontroller (mesage view)

--- a/beck_app/src/main/webapp/index.xhtml
+++ b/beck_app/src/main/webapp/index.xhtml
@@ -34,7 +34,10 @@
         <h:link outcome="/user/List" value="Show All User Items"/>
         <br />
         <h:link outcome="/userGroups/List" value="Show All UserGroups Items"/>
-         <h:link outcome="/map/addMarkers" value="Mapa"/>
+        <br />
+        <h:link outcome="/map/addMarkers" value="Mapa"/>
+        <br />
+        <h:link outcome="/guest/List" value="Guest"/>
     </h:body>
 
 
