--- a/beck_app/src/main/webapp/map/addMarkers.xhtml
+++ b/beck_app/src/main/webapp/map/addMarkers.xhtml
@@ -6,6 +6,16 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
- <p:gmap center="41.381542, 2.122893" zoom="15" type="HYBRID" style="width:100%;height:400px" />
    
+ 
+  <f:view>
+        <h:head>
+            <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
+        </h:head>
+
+        <h:body>
+            Map:
+           <p:gmap center="41.381542, 2.122893" zoom="15" type="HYBRID" style="width:100%;height:400px" />
+        </h:body>
+    </f:view>
 </html>
