--- a/beck_app/src/main/webapp/guest/List.xhtml
+++ b/beck_app/src/main/webapp/guest/List.xhtml
@@ -16,6 +16,8 @@
         <ui:define name="body">
             <h:form id="NoticeListForm">
                 <p:panel header="#{bundle.ListNoticeTitle}">
+                    <p:outputLabel value="Force Selection:" for="acForce" />
+                    <p:autoComplete id="acForce" forceSelection="true" value="#{noticeController.selected}" completeMethod="#{noticeController.completeText}" />
                     <p:dataTable id="datalist" value="#{noticeController.items}" var="item"
                                  selectionMode="single" selection="#{noticeController.selected}"
                                  paginator="true"
