add autocompleteto SID

--- a/beck_app/src/main/webapp/index.xhtml
+++ b/beck_app/src/main/webapp/index.xhtml
@@ -38,6 +38,8 @@
         <h:link outcome="/map/addMarkers" value="Mapa"/>
         <br />
         <h:link outcome="/guest/List" value="Guest"/>
+         <br />
+        <h:link outcome="/guest/ListNotice" value="GuestNotice"/>
     </h:body>
 
 
