--- a/beck_app/src/main/webapp/index.xhtml
+++ b/beck_app/src/main/webapp/index.xhtml
@@ -11,29 +11,29 @@
         <br />
         <h:link outcome="welcomePrimefaces" value="Primefaces welcome page" />
         <br />
-        <h:link outcome="/address/List" value="Show All Address Items"/>
+        <h:link outcome="/admin_views/address/List" value="Show All Address Items"/>
         <br />
-        <h:link outcome="/communication/List" value="Show All Communication Items"/>
+        <h:link outcome="/admin_views/communication/List" value="Show All Communication Items"/>
         <br />
-        <h:link outcome="/event/List" value="Show All Event Items"/>
+        <h:link outcome="/admin_views/event/List" value="Show All Event Items"/>
         <br />
-        <h:link outcome="/group1/List" value="Show All Group1 Items"/>
+        <h:link outcome="/admin_views/group1/List" value="Show All Group1 Items"/>
         <br />
-        <h:link outcome="/groupEvents/List" value="Show All GroupEvents Items"/>
+        <h:link outcome="/admin_views/groupEvents/List" value="Show All GroupEvents Items"/>
         <br />
-        <h:link outcome="/info/List" value="Show All Info Items"/>
+        <h:link outcome="/admin_views/info/List" value="Show All Info Items"/>
         <br />
-        <h:link outcome="/notice/List" value="Show All Notice Items"/>
+        <h:link outcome="/admin_views/notice/List" value="Show All Notice Items"/>
         <br />
-        <h:link outcome="/point/List" value="Show All Point Items"/>
+        <h:link outcome="/admin_views/point/List" value="Show All Point Items"/>
         <br />
-        <h:link outcome="/role/List" value="Show All Role Items"/>
+        <h:link outcome="/admin_views/role/List" value="Show All Role Items"/>
         <br />
-        <h:link outcome="/track/List" value="Show All Track Items"/>
+        <h:link outcome="/admin_views/track/List" value="Show All Track Items"/>
         <br />
-        <h:link outcome="/user/List" value="Show All User Items"/>
+        <h:link outcome="/admin_views/user/List" value="Show All User Items"/>
         <br />
-        <h:link outcome="/userGroups/List" value="Show All UserGroups Items"/>
+        <h:link outcome="/admin_views/userGroups/List" value="Show All UserGroups Items"/>
         <br />
         <h:link outcome="/map/addMarkers" value="Mapa"/>
         <br />
@@ -41,16 +41,6 @@
          <br />
         <h:link outcome="/guest/ListNotice" value="GuestNotice"/>
     </h:body>
-
-
-
-
-
-
-
-
-
-
 
 
 </html>
