--- a/beck_app/src/main/webapp/template.xhtml
+++ b/beck_app/src/main/webapp/template.xhtml
@@ -20,20 +20,18 @@
                 <h:form id="menuForm">
                     <p:menubar>
                         <p:menuitem value="#{bundle.Home}" outcome="/index" icon="ui-icon-home"/>
-                        <p:submenu label="#{bundle.Maintenance}">
-                            <p:menuitem value="Address" outcome="/address/List.xhtml" />
-                            <p:menuitem value="Communication" outcome="/communication/List.xhtml" />
-                            <p:menuitem value="Event" outcome="/event/List.xhtml" />
-                            <p:menuitem value="Group1" outcome="/group1/List.xhtml" />
-                            <p:menuitem value="GroupEvents" outcome="/groupEvents/List.xhtml" />
-                            <p:menuitem value="Info" outcome="/info/List.xhtml" />
-                            <p:menuitem value="Notice" outcome="/notice/List.xhtml" />
-                            <p:menuitem value="Point" outcome="/point/List.xhtml" />
-                            <p:menuitem value="Role" outcome="/role/List.xhtml" />
-                            <p:menuitem value="Track" outcome="/track/List.xhtml" />
-                            <p:menuitem value="User" outcome="/user/List.xhtml" />
-                            <p:menuitem value="UserGroups" outcome="/userGroups/List.xhtml" />
-                        </p:submenu>
+                         <p:menuitem value="Address" outcome="/admin_views/address/List.xhtml" />
+                            <p:menuitem value="Communication" outcome="/admin_views/communication/List.xhtml" />
+                            <p:menuitem value="Event" outcome="/admin_views/event/List.xhtml" />
+                            <p:menuitem value="Group1" outcome="/admin_views/group1/List.xhtml" />
+                            <p:menuitem value="GroupEvents" outcome="/admin_views/groupEvents/List.xhtml" />
+                            <p:menuitem value="Info" outcome="/admin_views/info/List.xhtml" />
+                            <p:menuitem value="Notice" outcome="/admin_views/notice/List.xhtml" />
+                            <p:menuitem value="Point" outcome="/admin_views/point/List.xhtml" />
+                            <p:menuitem value="Role" outcome="/admin_views/role/List.xhtml" />
+                            <p:menuitem value="Track" outcome="/admin_views/track/List.xhtml" />
+                            <p:menuitem value="User" outcome="/admin_views/user/List.xhtml" />
+                            <p:menuitem value="UserGroups" outcome="/admin_views/userGroups/List.xhtml" />
                     </p:menubar>
                 </h:form>
             </p:layoutUnit>
