--- a/beck_app/src/main/webapp/guest/List.xhtml
+++ b/beck_app/src/main/webapp/guest/List.xhtml
@@ -17,7 +17,8 @@
             <h:form id="NoticeListForm">
                 <p:panel header="#{bundle.ListNoticeTitle}">
                     <p:outputLabel value="Force Selection:" for="acForce" />
-                    <p:autoComplete id="acForce" forceSelection="true" value="#{noticeController.selected}" completeMethod="#{noticeController.completeText}" />
+                    <p:autoComplete id="acForce" forceSelection="true" value="#{noticeController.selected}" completeMethod="#{noticeController.completeText}" >
+                     <p:ajax update=":NoticeListForm:datalist" /> </p:autoComplete>
                     <p:dataTable id="datalist" value="#{noticeController.items}" var="item"
                                  selectionMode="single" selection="#{noticeController.selected}"
                                  paginator="true"
@@ -29,12 +30,7 @@
                         <p:ajax event="rowSelect"   update=" viewButton  "/>
                         <p:ajax event="rowUnselect" update=" viewButton "/>
 
-                        <p:column style="width:20%">
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListNoticeTitle_id}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.id}" />
-                        </p:column>
+                     
                        
                         <p:column>
                             <f:facet name="header">
