--- a/beck_app/src/main/webapp/index.xhtml
+++ b/beck_app/src/main/webapp/index.xhtml
@@ -7,39 +7,12 @@
         <h:outputStylesheet name="css/jsfcrud.css"/>
     </h:head>
     <h:body>
-        Hello from Facelets
+     Witamy w BECK!!!
         <br />
-        <h:link outcome="welcomePrimefaces" value="Primefaces welcome page" />
-        <br />
-        <h:link outcome="/admin_views/address/List" value="Show All Address Items"/>
-        <br />
-        <h:link outcome="/admin_views/communication/List" value="Show All Communication Items"/>
-        <br />
-        <h:link outcome="/admin_views/event/List" value="Show All Event Items"/>
-        <br />
-        <h:link outcome="/admin_views/group1/List" value="Show All Group1 Items"/>
-        <br />
-        <h:link outcome="/admin_views/groupEvents/List" value="Show All GroupEvents Items"/>
-        <br />
-        <h:link outcome="/admin_views/info/List" value="Show All Info Items"/>
-        <br />
-        <h:link outcome="/admin_views/notice/List" value="Show All Notice Items"/>
-        <br />
-        <h:link outcome="/admin_views/point/List" value="Show All Point Items"/>
-        <br />
-        <h:link outcome="/admin_views/role/List" value="Show All Role Items"/>
-        <br />
-        <h:link outcome="/admin_views/track/List" value="Show All Track Items"/>
-        <br />
-        <h:link outcome="/admin_views/user/List" value="Show All User Items"/>
-        <br />
-        <h:link outcome="/admin_views/userGroups/List" value="Show All UserGroups Items"/>
-        <br />
-        <h:link outcome="/map/addMarkers" value="Mapa"/>
-        <br />
-        <h:link outcome="/guest/List" value="Guest"/>
+        <h:link outcome="/login/login" value="Zaloguj do portalu"/>
          <br />
-        <h:link outcome="/guest/ListNotice" value="GuestNotice"/>
+        <h:link outcome="/login/register" value="Zarejestruj"/>
+       
     </h:body>
 
 
