--- a/beck_app/src/main/webapp/login/register.xhtml
+++ b/beck_app/src/main/webapp/login/register.xhtml
@@ -30,14 +30,19 @@
                         <p:inputText id="street" value="#{addressController.selected.street}" title="#{bundle.CreateAddressTitle_street}" />
                         <p:outputLabel value="#{bundle.CreateAddressLabel_suburb}" for="suburb" />
                         <p:inputText id="suburb" value="#{addressController.selected.suburb}" title="#{bundle.CreateAddressTitle_suburb}" />
-        </h:panelGrid> 
-         <f:facet name="footer">
-                <p:commandButton type="submit" value="Login"  action="#{userController.register()}" ajax="false" />
+        <f:facet name="footer">
+             <p:commandButton id="registerButton"   icon="ui-icon-pencil" value="Zarejestruj"   disabled="#{empty userController.selected}">
+                    <f:actionListener binding="#{addressController.create()}" />
+                    <f:actionListener binding="#{userController.selected.setAddressId(addressController.getIdByVaulesFromDb(addressController.selected.country,addressControler.selected.city, addressController.selected.street, adressControler.selected.suburb))}" />
+                    <f:actionListener binding="#{userController.create()}" />
+                   
+                </p:commandButton>
             </f:facet> 
+        </h:panelGrid> 
+         
         </h:form>
     </ui:define>
 </ui:composition>
 </html>
-
 
 
