--- a/beck_app/src/main/webapp/user_views/main.xhtml
+++ b/beck_app/src/main/webapp/user_views/main.xhtml
@@ -11,7 +11,8 @@
         <br />
         <h:link outcome="/user_views/manage_groups/manage_groups" value="Zarządzaj grupami"/>
          <br />
-       
+       <h:link outcome="/user_views/gmaps_test" value="Testy google maps"/>
+         <br />
        
     </h:body>
 
