--- a/beck_app/src/main/webapp/user_views/main.xhtml
+++ b/beck_app/src/main/webapp/user_views/main.xhtml
@@ -1,21 +1,23 @@
-<?xml version='1.0' encoding='UTF-8' ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <h:head>
-        <title>Facelet Title</title>
-        <h:outputStylesheet name="css/jsfcrud.css"/>
-    </h:head>
-    <h:body>
-     Witamy w userBECK!!!
-        <br />
-        <h:link outcome="/user_views/manage_groups/manage_groups" value="Zarządzaj grupami"/>
-         <br />
-       <h:link outcome="/user_views/gmaps_test" value="Testy google maps"/>
-         <br />
-       
-    </h:body>
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
+    <ui:composition template="/template_user.xhtml">
+
+
+        <ui:define name="title">
+            tutaj tytul head
+        </ui:define>
+
+        <ui:define name="body">
+  
+            <div>tutaj bd artykuly</div>
+
+        </ui:define>
+    </ui:composition>
 
 </html>
-
