--- a/beck_app/src/main/webapp/login/login.xhtml
+++ b/beck_app/src/main/webapp/login/login.xhtml
@@ -18,8 +18,8 @@
             <p:password id="password" value="#{userController.selected.password}" required="true" label="password" />
             
             <f:facet name="footer">
-                <p:commandButton type="submit" value="Login"  action="#{userController.login()}" ajax="false" >
-                      <f:actionListener binding="#{userController.setProps(userController.selected.username, userController.selected.password)}" />      
+                <p:commandButton type="submit" value="Login"  action="#{userController.login}" ajax="false" >
+                       <f:actionListener binding="#{userController.setProps(userController.selected.username, userController.selected.password)}" />     
                 </p:commandButton>
             </f:facet> 
         </h:panelGrid> 
