--- a/beck_app/src/main/webapp/login/wylogowano.xhtml
+++ b/beck_app/src/main/webapp/login/wylogowano.xhtml
@@ -12,6 +12,6 @@ and open the template in the editor.
     </head>
     <body>
        
-        <div>Wylogowano z e-dziennika</div>
+        <div>Wylogowano z BECK</div>
     </body>
 </html>
