--- a/beck_app/src/main/webapp/template_admin.xhtml
+++ b/beck_app/src/main/webapp/template_admin.xhtml
@@ -28,9 +28,8 @@
       
         </p:themeSwitcher>
     </h:panelGrid>
-                    <p:menubar>
-                        <p:menuitem value="#{bundle.Home}" outcome="/index" icon="ui-icon-home"/>
-                         <p:menuitem value="Address" outcome="/admin_views/address/List.xhtml" />
+                    <p:menubar>                      
+                            <p:menuitem value="Address" outcome="/admin_views/address/List.xhtml" />
                             <p:menuitem value="Communication" outcome="/admin_views/communication/List.xhtml" />
                             <p:menuitem value="Event" outcome="/admin_views/event/List.xhtml" />
                             <p:menuitem value="Group1" outcome="/admin_views/group1/List.xhtml" />
@@ -42,6 +41,7 @@
                             <p:menuitem value="Track" outcome="/admin_views/track/List.xhtml" />
                             <p:menuitem value="User" outcome="/admin_views/user/List.xhtml" />
                             <p:menuitem value="UserGroups" outcome="/admin_views/userGroups/List.xhtml" />
+                            <p:menuitem value="Wyloguj" action="#{userController.logout()}" outcome="/login/wylogowano.xhtml" />
                     </p:menubar>
                 </h:form>
             </p:layoutUnit>
