--- a/beck_app/src/main/webapp/user_views/manage_groups/manage_groups.xhtml
+++ b/beck_app/src/main/webapp/user_views/manage_groups/manage_groups.xhtml
@@ -11,7 +11,7 @@ and open the template in the editor.
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/template.xhtml">
+    <ui:composition template="/template_user.xhtml">
 
 
         <ui:define name="title">
