--- a/beck_app/src/main/webapp/user_views/manage_groups/Create.xhtml
+++ b/beck_app/src/main/webapp/user_views/manage_groups/Create.xhtml
@@ -14,15 +14,15 @@
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{group1Controller.selected != null}">
                         <p:outputLabel value="#{bundle.CreateGroup1Label_groupName}" for="groupName" />
-                        <p:inputText id="groupName" value="#{group1Controller.selected.groupName}" title="#{bundle.CreateGroup1Title_groupName}" />
+                        <p:inputText id="groupName" value="#{group1Controller.selected.groupName}" title="#{bundle.CreateGroup1Title_groupName}" required="true" />
                         <p:outputLabel value="#{bundle.CreateGroup1Label_groupDesc}" for="groupDesc" />
                         <p:inputText id="groupDesc" value="#{group1Controller.selected.groupDesc}" title="#{bundle.CreateGroup1Title_groupDesc}" />                      
                     </p:panelGrid>
-                    <p:pickList id="pickList" value="#{userGroupsController.users}" var="users" itemLabel="#{users.username}" itemValue="#{userGroupsController.users}" effect="bounce" showSourceControls="true" showTargetControls="true" showCheckbox="true"
+                    <p:pickList id="pickList" value="#{userGroupsController.users}" var="users" itemLabel="#{users.username}" itemValue="#{users}" effect="bounce" showSourceControls="true" showTargetControls="true" showCheckbox="true"
                     showSourceFilter="true" showTargetFilter="true" filterMatchMode="contains" >
-                        <f:facet name="sourceCaption">Available</f:facet>
-                        <f:facet name="targetCaption">Starting</f:facet> 
-                       
+                        <f:facet name="sourceCaption">Dostępni</f:facet>
+                        <f:facet name="targetCaption">Dodani</f:facet>                       
+                      <f:converter converterId="com.beck.beck_app.UserConverter" />
                      </p:pickList>
                     <p:commandButton actionListener="#{group1Controller.create}" value="#{bundle.Save}" update="display,:Group1ListForm:datalist,:growl" oncomplete="handleSubmit(args,'Group1CreateDialog');">
                         <f:actionListener binding="#{group1Controller.setProps(group1Controller.selected.groupName)}" />                       
