--- a/beck_app/src/main/webapp/user_views/communication/List.xhtml
+++ b/beck_app/src/main/webapp/user_views/communication/List.xhtml
@@ -6,7 +6,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/template_admin.xhtml">
+    <ui:composition template="/template_user.xhtml">
 
 
         <ui:define name="title">
@@ -17,10 +17,7 @@
             <h:form id="CommunicationListForm">
                 <p:panel header="#{bundle.ListCommunicationTitle}">
                     <p:tabView>
-                        <p:tab title="Godfather Part I">
-                            <h:panelGrid columns="2" cellpadding="10">                                
-                                <h:outputText      value="The story begins as Don Vito Corleone..." />
-                            </h:panelGrid>
+                        <p:tab title="Wiadomości odebrane">
                             <p:dataTable id="datalist2" value="#{communicationController.items}" var="item"
                                          selectionMode="single" selection="#{communicationController.selected}"
                                          paginator="true"
@@ -64,10 +61,8 @@
                                 </f:facet>
                             </p:dataTable>
                         </p:tab>
-                          <p:tab title="Godfather Part I">
-                            <h:panelGrid columns="2" cellpadding="10">                                
-                                <h:outputText      value="The story begins as Don Vito Corleone..." />
-                            </h:panelGrid>
+                          <p:tab title="Wiadomości wysłane">   
+                           
                             <p:dataTable id="datalist3" value="#{communicationController.items}" var="item"
                                          selectionMode="single" selection="#{communicationController.selected}"
                                          paginator="true"
