--- a/beck_app/src/main/webapp/user_views/communication/Edit_1.xhtml
+++ b/beck_app/src/main/webapp/user_views/communication/Edit_1.xhtml
@@ -8,8 +8,8 @@
 
     <ui:composition>
 
-        <p:dialog id="CommunicationEditDlg" widgetVar="CommunicationEditDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.EditCommunicationTitle}">
-            <h:form id="CommunicationEditForm">
+        <p:dialog id="CommunicationEditDlg_1" widgetVar="CommunicationEditDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.EditCommunicationTitle}">
+            <h:form id="CommunicationEditForm_1">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{communicationController.selected != null}">
                         <p:outputLabel value="#{bundle.EditCommunicationLabel_id}" for="id" />
@@ -33,7 +33,7 @@
                                            itemValue="#{userIdToItem}"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
-                    <p:commandButton actionListener="#{communicationController.update}" value="#{bundle.Save}" update="display,:tabViews:CommunicationListFormDo:datalist2,:growl" oncomplete="handleSubmit(args, 'CommunicationEditDialog');"/>
+                    <p:commandButton actionListener="#{communicationController.update}" value="#{bundle.Save}" update="display,:tabViews:CommunicationListFormOd:datalist3,:growl" oncomplete="handleSubmit(args, 'CommunicationEditDialog');"/>
                     <p:commandButton value="#{bundle.Cancel}" onclick="CommunicationEditDialog.hide()"/>
                 </h:panelGroup>
             </h:form>
