--- a/beck_app/src/main/webapp/user_views/communication/List.xhtml
+++ b/beck_app/src/main/webapp/user_views/communication/List.xhtml
@@ -14,11 +14,14 @@
         </ui:define>
 
         <ui:define name="body">
-            <h:form id="CommunicationListForm">
-                <p:panel header="#{bundle.ListCommunicationTitle}">
-                    <p:tabView>
+
+            <p:panel  header="#{bundle.ListCommunicationTitle}">
+                
+                    <p:tabView id="tabViews" >
+
                         <p:tab title="Wiadomości odebrane">
-                            <p:dataTable id="datalist2" value="#{communicationController.items}" var="item"
+                            <h:form id="CommunicationListFormDo">
+                            <p:dataTable id="datalist2" value="#{communicationController.getItems()}" var="item"
                                          selectionMode="single" selection="#{communicationController.selected}"
                                          paginator="true"
                                          rowKey="#{item.id}"
@@ -60,56 +63,63 @@
                                     <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{communicationController.destroy}" update=":growl,datalist2" disabled="#{empty communicationController.selected}"/>
                                 </f:facet>
                             </p:dataTable>
+                            </h:form>
                         </p:tab>
-                          <p:tab title="Wiadomości wysłane">   
-                           
-                            <p:dataTable id="datalist3" value="#{communicationController.items}" var="item"
-                                         selectionMode="single" selection="#{communicationController.selected}"
-                                         paginator="true"
-                                         rowKey="#{item.id}"
-                                         rows="10"
-                                         rowsPerPageTemplate="10,20,30,40,50"
-                                         >
+                        <p:tab title="Wiadomości wysłane">   
+                            <h:form id="CommunicationListFormOd">
+                                <p:dataTable id="datalist3" value="#{communicationController.items}" var="item"
+                                             selectionMode="single" selection="#{communicationController.selected}"
+                                             paginator="true"
+                                             rowKey="#{item.id}"
+                                             rows="10"
+                                             rowsPerPageTemplate="10,20,30,40,50"
+                                             >
 
-                                <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
-                                <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
+                                    <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
+                                    <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
 
-                                <p:column>
-                                    <f:facet name="header">
-                                        <h:outputText value="#{bundle.ListCommunicationTitle_title}"/>
+                                    <p:column>
+                                        <f:facet name="header">
+                                            <h:outputText value="#{bundle.ListCommunicationTitle_title}"/>
+                                        </f:facet>
+                                        <h:outputText value="#{item.title}"/>
+                                    </p:column>
+                                    <p:column>
+                                        <f:facet name="header">
+                                            <h:outputText value="#{bundle.ListCommunicationTitle_message}"/>
+                                        </f:facet>
+                                        <h:outputText value="#{item.message}"/>
+                                    </p:column>                        
+                                    <p:column rendered="false">
+                                        <f:facet name="header">
+                                            <h:outputText value="#{bundle.ListCommunicationTitle_userIdFrom}"/>
+                                        </f:facet>
+                                        <h:outputText value="#{item.userIdFrom}"/>
+                                    </p:column>
+                                    <p:column>
+                                        <f:facet name="header">
+                                            <h:outputText value="#{bundle.ListCommunicationTitle_userIdTo}"/>
+                                        </f:facet>
+                                        <h:outputText value="#{item.userIdTo}"/>
+                                    </p:column>
+                                    <f:facet name="footer">
+                                        <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{communicationController.prepareCreate}" update=":CommunicationCreateForm_1" oncomplete="PF('CommunicationCreateDialog').show()"/>
+                                        <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":CommunicationViewForm_1" oncomplete="PF('CommunicationViewDialog_1').show()" disabled="#{empty communicationController.selected}"/>
+                                        <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":CommunicationEditForm_1" oncomplete="PF('CommunicationEditDialog_1').show()" disabled="#{empty communicationController.selected}"/>
+                                        <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{communicationController.destroy}" update=":growl,datalist3" disabled="#{empty communicationController.selected}"/>
                                     </f:facet>
-                                    <h:outputText value="#{item.title}"/>
-                                </p:column>
-                                <p:column>
-                                    <f:facet name="header">
-                                        <h:outputText value="#{bundle.ListCommunicationTitle_message}"/>
-                                    </f:facet>
-                                    <h:outputText value="#{item.message}"/>
-                                </p:column>                        
-                                <p:column rendered="false">
-                                    <f:facet name="header">
-                                        <h:outputText value="#{bundle.ListCommunicationTitle_userIdFrom}"/>
-                                    </f:facet>
-                                    <h:outputText value="#{item.userIdFrom}"/>
-                                </p:column>
-                                <p:column>
-                                    <f:facet name="header">
-                                        <h:outputText value="#{bundle.ListCommunicationTitle_userIdTo}"/>
-                                    </f:facet>
-                                    <h:outputText value="#{item.userIdTo}"/>
-                                </p:column>
-                                <f:facet name="footer">
-                                    <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{communicationController.prepareCreate}" update=":CommunicationCreateForm" oncomplete="PF('CommunicationCreateDialog').show()"/>
-                                    <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":CommunicationViewForm" oncomplete="PF('CommunicationViewDialog').show()" disabled="#{empty communicationController.selected}"/>
-                                    <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":CommunicationEditForm" oncomplete="PF('CommunicationEditDialog').show()" disabled="#{empty communicationController.selected}"/>
-                                    <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{communicationController.destroy}" update=":growl,datalist3" disabled="#{empty communicationController.selected}"/>
-                                </f:facet>
-                            </p:dataTable>
+                                </p:dataTable>
+                            </h:form>
                         </p:tab>
-                    </p:tabView>                   
-                </p:panel>
-            </h:form>
 
+
+                    </p:tabView>
+
+            </p:panel>
+
+            <ui:include src="Create_1.xhtml"/>
+            <ui:include src="Edit_1.xhtml"/>
+             <ui:include src="View_1.xhtml"/>
             <ui:include src="Create.xhtml"/>
             <ui:include src="Edit.xhtml"/>
             <ui:include src="View.xhtml"/>
