commit 20.05 dodanie nowych tabel dla img oraz nowy kolumny dla communication

--- a/beck_app/src/main/webapp/index.xhtml
+++ b/beck_app/src/main/webapp/index.xhtml
@@ -7,13 +7,19 @@
         <h:outputStylesheet name="css/jsfcrud.css"/>
     </h:head>
     <h:body>
-     Witamy w BECK!!!
+        Witamy w BECK!!!
         <br />
         <h:link outcome="/login/login" value="Zaloguj do portalu"/>
-         <br />
+        <br />
         <h:link outcome="/login/register" value="Zarejestruj"/>
-       
+
+        <br />
+        <h:link outcome="/admin_views/imagesEvent/List" value="Show All ImagesEvent Items"/>
+        <br />
+        <h:link outcome="/admin_views/imagesNotice/List" value="Show All ImagesNotice Items"/>
     </h:body>
+
+
 
 
 </html>
