--- a/beck_app/src/main/webapp/user_views/communication/List.xhtml
+++ b/beck_app/src/main/webapp/user_views/communication/List.xhtml
@@ -29,8 +29,8 @@
                                          rowsPerPageTemplate="10,20,30,40,50"
                                          >
 
-                                <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
-                                <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
+                                <p:ajax event="rowSelect"   update="viewButton editButton "/>
+                                <p:ajax event="rowUnselect" update="viewButton editButton "/>
 
                                 <p:column>
                                     <f:facet name="header">
@@ -56,11 +56,10 @@
                                     </f:facet>
                                     <h:outputText value="#{item.userIdTo}"/>
                                 </p:column>
-                                <f:facet name="footer">
-                                    <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{communicationController.prepareCreate}" update=":CommunicationCreateForm" oncomplete="PF('CommunicationCreateDialog').show()"/>
+                                <f:facet name="footer">                                   
                                     <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":CommunicationViewForm" oncomplete="PF('CommunicationViewDialog').show()" disabled="#{empty communicationController.selected}"/>
                                     <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":CommunicationEditForm" oncomplete="PF('CommunicationEditDialog').show()" disabled="#{empty communicationController.selected}"/>
-                                    <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{communicationController.destroy}" update=":growl,datalist2" disabled="#{empty communicationController.selected}"/>
+                                    
                                 </f:facet>
                             </p:dataTable>
                             </h:form>
@@ -75,8 +74,8 @@
                                              rowsPerPageTemplate="10,20,30,40,50"
                                              >
 
-                                    <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
-                                    <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
+                                    <p:ajax event="rowSelect"   update="createButton viewButton editButton "/>
+                                    <p:ajax event="rowUnselect" update="createButton viewButton editButton "/>
 
                                     <p:column>
                                         <f:facet name="header">
@@ -106,7 +105,7 @@
                                         <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{communicationController.prepareCreate}" update=":CommunicationCreateForm_1" oncomplete="PF('CommunicationCreateDialog').show()"/>
                                         <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":CommunicationViewForm_1" oncomplete="PF('CommunicationViewDialog_1').show()" disabled="#{empty communicationController.selected}"/>
                                         <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":CommunicationEditForm_1" oncomplete="PF('CommunicationEditDialog_1').show()" disabled="#{empty communicationController.selected}"/>
-                                        <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{communicationController.destroy}" update=":growl,datalist3" disabled="#{empty communicationController.selected}"/>
+                                       
                                     </f:facet>
                                 </p:dataTable>
                             </h:form>
