--- a/beck_app/src/main/webapp/user_views/communication/Edit_1.xhtml
+++ b/beck_app/src/main/webapp/user_views/communication/Edit_1.xhtml
@@ -8,7 +8,7 @@
 
     <ui:composition>
 
-        <p:dialog id="CommunicationEditDlg_1" widgetVar="CommunicationEditDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.EditCommunicationTitle}">
+        <p:dialog id="CommunicationEditDlg_1" widgetVar="CommunicationEditDialog1" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.EditCommunicationTitle}">
             <h:form id="CommunicationEditForm_1">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{communicationController.selected != null}">
